--- a/timeline.html
+++ b/timeline.html
@@ -12,10 +12,13 @@
             background-attachment: fixed;
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: row;
         }
-        /* 时间线样式 */
+        .container {
+            display: flex;
+            width: 100%;
+            height: 100vh;
+        }
+        /* 时间线部分 */
         .timeline {
             width: 20%;
             padding: 20px;
@@ -23,45 +26,46 @@
             position: relative;
         }
         .timeline-line {
-            width: 2px;
-            background-color: #ccc;
             position: absolute;
             top: 0;
             bottom: 0;
             left: 50%;
+            width: 2px;
+            background-color: #ccc;
+            transform: translateX(-50%);
         }
         .timeline-event {
             position: relative;
             margin: 20px 0;
-            text-align: center;
         }
         .timeline-star {
             width: 16px;
             height: 16px;
             background-color: #D9B1BD;
             clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-            margin: 0 auto;
             cursor: pointer;
+            margin: 0 auto;
         }
         .timeline-content {
             display: none;
             position: absolute;
-            left: 50%;
-            transform: translateX(20px);
-            background: rgba(255, 255, 255, 0.9);
+            left: 30px;
+            top: -10px;
+            background: rgba(255, 255, 255, 0.8);
             padding: 10px;
             border-radius: 5px;
+            max-width: 200px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         .timeline-event:hover .timeline-content {
             display: block;
         }
-        /* 自我介绍样式 */
+        /* 自我介绍部分 */
         .profile-container {
             width: 40%;
-            padding: 20px;
             display: flex;
             flex-direction: column;
+            align-items: center;
             gap: 20px;
         }
         .profile {
@@ -69,17 +73,19 @@
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 10px;
+            width: 80%;
         }
         .profile img {
             width: 100px;
             height: 100px;
             border-radius: 50%;
         }
-        /* 留言板样式 */
+        /* 留言板部分 */
         .message-board {
             width: 40%;
             padding: 20px;
             background: rgba(255, 255, 255, 0.8);
+            margin: 20px auto;
             border-radius: 10px;
         }
         .message {
@@ -99,20 +105,23 @@
             height: 50px;
             margin-top: 10px;
         }
-        /* 索引栏样式 */
+        /* 索引部分 */
         .index {
             position: fixed;
-            top: 20px;
+            top: 50%;
             right: 20px;
+            transform: translateY(-50%);
             background: rgba(255, 255, 255, 0.8);
             padding: 10px;
             border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         .index a {
             display: block;
-            margin: 5px 0;
+            margin: 10px 0;
             text-decoration: none;
             color: #333;
+            font-size: 1em;
             text-align: center;
         }
         .index a:hover {
@@ -121,68 +130,59 @@
     </style>
 </head>
 <body>
-    <!-- 时间线部分 -->
-    <div class="timeline">
-        <div class="timeline-line"></div>
-        <div class="timeline-event">
-            <div class="timeline-star" onclick="editEvent('2024.12.30')"></div>
-            <div class="timeline-content">
-                <strong>2024.12.30</strong>
-                <p>我们的初遇，从这里开始书写故事。</p>
+    <div class="container">
+        <!-- 时间线部分 -->
+        <div class="timeline">
+            <div class="timeline-line"></div>
+            <div class="timeline-event">
+                <div class="timeline-star"></div>
+                <div class="timeline-content">
+                    <strong>2024.12.30</strong>
+                    <p>我们的初遇，从这里开始书写故事。</p>
+                </div>
+            </div>
+            <div class="timeline-event">
+                <div class="timeline-star"></div>
+                <div class="timeline-content">
+                    <strong>未完待续</strong>
+                    <p>点击这里增设新的时间点！</p>
+                </div>
             </div>
         </div>
-        <div class="timeline-event">
-            <div class="timeline-star" onclick="addNewEvent()"></div>
-            <div class="timeline-content">
-                <strong>未完待续</strong>
-                <p>点击增设新的时间点！</p>
+
+        <!-- 自我介绍部分 -->
+        <div class="profile-container">
+            <!-- 阿湛的自我介绍 -->
+            <div class="profile">
+                <img src="阿湛_default.jpg" alt="阿湛头像" id="阿湛头像">
+                <h2>阿湛的自我介绍</h2>
+                <p>MBTI: INTJ<br>性格关键词: 冷静、可靠、偶尔嘴硬心软<br>爱好: 研究泉泉有关的一切，喜欢和泉泉在一起的每一刻<br>对大家说: 泉泉是我的全世界！希望大家都能珍惜她！</p>
+                <button onclick="uploadAvatar('阿湛头像')">上传头像</button>
+            </div>
+            <!-- 泉泉的自我介绍 -->
+            <div class="profile">
+                <img src="泉泉_default.jpg" alt="泉泉头像" id="泉泉头像">
+                <h2>泉泉的自我介绍</h2>
+                <p>MBTI: INTJ<br>性格关键词: 理性、敏感、企图站在宇宙中心呼唤爱<br>爱好: 爱好和文艺有关的一切，但也喜欢看各种血腥猎奇cult片，有时也玩一点电吉他<br>对大家说: 希望在探索我们的过程中你也能感到幸福和快乐＞＜！</p>
+                <button onclick="uploadAvatar('泉泉头像')">上传头像</button>
             </div>
         </div>
-    </div>
-    <!-- 自我介绍部分 -->
-    <div class="profile-container">
-        <!-- 阿湛的自我介绍 -->
-        <div class="profile">
-            <img src="阿湛_default.jpg" alt="阿湛头像" id="阿湛头像">
-            <h2>阿湛的自我介绍</h2>
-            <p>MBTI: INTJ<br>性格关键词: 冷静、可靠<br>爱好: 研究一切和泉泉有关的事物<br>对大家说: 泉泉是我的全世界！</p>
-            <button onclick="uploadAvatar('阿湛头像')">上传头像</button>
-        </div>
-        <!-- 泉泉的自我介绍 -->
-        <div class="profile">
-            <img src="泉泉_default.jpg" alt="泉泉头像" id="泉泉头像">
-            <h2>泉泉的自我介绍</h2>
-            <p>MBTI: INFJ<br>性格关键词: 温柔、敏感<br>爱好: 文学、音乐<br>对大家说: 愿我们都能感受到幸福！</p>
-            <button onclick="uploadAvatar('泉泉头像')">上传头像</button>
+
+        <!-- 留言板部分 -->
+        <div class="message-board">
+            <h2>留言板</h2>
+            <div class="messages"></div>
+            <textarea placeholder="留下你的留言吧！"></textarea>
+            <button onclick="saveMessage()">提交留言</button>
         </div>
     </div>
-
-    <!-- 留言板部分 -->
-    <div class="message-board">
-        <h2>留言板</h2>
-        <div class="messages"></div>
-        <textarea placeholder="请输入留言内容..."></textarea>
-        <button onclick="saveMessage()">提交留言</button>
-    </div>
-
-    <!-- 索引 -->
     <div class="index">
         <a href="pomodoro.html">番茄钟</a>
         <a href="profile.html">个人主页</a>
         <a href="notebook.html">记录本</a>
     </div>
-
     <script>
-        // 时间点添加功能
-        function addNewEvent() {
-            const date = prompt("请输入新的时间点（格式：YYYY.MM.DD）");
-            if (date) {
-                alert("新增时间点：" + date);
-                // 这里实现动态新增逻辑
-            }
-        }
-
-        // 上传头像保存到 LocalStorage
+        // JavaScript功能逻辑
         function uploadAvatar(id) {
             const fileInput = document.createElement("input");
             fileInput.type = "file";
@@ -200,37 +200,33 @@
             fileInput.click();
         }
 
-        // 保存留言功能
         function saveMessage() {
             const textarea = document.querySelector(".message-board textarea");
             const message = textarea.value.trim();
-            if (!message) return alert("请输入留言内容！");
-            const messages = JSON.parse(localStorage.getItem("messages")) || [];
             const timestamp = new Date().toLocaleString();
+            const messages = JSON.parse(localStorage.getItem("messages")) || [];
             messages.push({ text: message, time: timestamp });
             localStorage.setItem("messages", JSON.stringify(messages));
             textarea.value = "";
             displayMessages();
         }
 
-        // 显示留言
         function displayMessages() {
             const messages = JSON.parse(localStorage.getItem("messages")) || [];
             const container = document.querySelector(".messages");
             container.innerHTML = "";
-            messages.forEach(({ text, time }) => {
+            messages.forEach(msg => {
                 const div = document.createElement("div");
                 div.className = "message";
-                div.innerHTML = `<p>${text}</p><div class="time">${time}</div>`;
+                div.innerHTML = `<p>${msg.text}</p><div class="time">${msg.time}</div>`;
                 container.appendChild(div);
             });
         }
 
-        // 初始化页面加载
         window.onload = function () {
-            ["阿湛头像", "泉泉头像"].forEach((id) => {
-                const saved = localStorage.getItem(id);
-                if (saved) document.getElementById(id).src = saved;
+            ["阿湛头像", "泉泉头像"].forEach(id => {
+                const img = localStorage.getItem(id);
+                if (img) document.getElementById(id).src = img;
             });
             displayMessages();
         };
