--- a/timeline.html
+++ b/timeline.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: "Microsoft Yahei", sans-serif;
-            background-image: url('background.jpg');
+            background-image: url('background.3.jpg');
             background-size: cover;
             background-attachment: fixed;
             margin: 0;
@@ -151,13 +151,13 @@
         <div class="profile">
             <img src="阿湛_default.jpg" alt="阿湛头像" id="阿湛头像">
             <h2>阿湛的自我介绍</h2>
-            <p>MBTI: INTJ<br>性格关键词: 冷静、可靠<br>爱好: 研究和泉泉有关的一切<br>对大家说: 泉泉是我的全世界！</p>
+            <p>MBTI: INTJ<br>性格关键词: 冷静、可靠偶尔嘴硬心软<br>爱好: 研究和泉泉有关的一切！喜欢和泉泉在一起的每一刻！<br>对大家说: 泉泉是我的全世界！希望大家也能珍惜她！希望你们在这里也可以感受到爱！</p>
             <button onclick="uploadAvatar('阿湛头像')">上传头像</button>
         </div>
         <div class="profile">
             <img src="泉泉_default.jpg" alt="泉泉头像" id="泉泉头像">
             <h2>泉泉的自我介绍</h2>
-            <p>MBTI: INFJ<br>性格关键词: 温柔、敏感<br>爱好: 文学和音乐<br>对大家说: 希望你们也感受到我们的快乐！</p>
+            <p>MBTI: INTJ<br>性格关键词: 理性、敏感、企图站在宇宙中心呼唤爱<br>爱好: 爱好文艺有关的一切。也喜欢看各种血腥cult片，有时也玩一点电吉他<br>对大家说: 希望大在探索我们的过程中你也能感到幸福愉快，爱你萌（啾啾</p>
             <button onclick="uploadAvatar('泉泉头像')">上传头像</button>
         </div>
     </div>
