--- a/timeline.html
+++ b/timeline.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>梦是榛果巧克力</title>
+    <title>梦是榛果巧克力 - 时间线</title>
     <style>
         body {
             font-family: "Microsoft Yahei", sans-serif;
@@ -12,11 +12,15 @@
             background-attachment: fixed;
             margin: 0;
             padding: 0;
+        }
+        .container {
             display: flex;
+            width: 100%;
             height: 100vh;
         }
+        /* 时间线样式 */
         .timeline {
-            width: 15%;
+            width: 20%;
             position: relative;
             padding: 20px;
             border-right: 2px solid #ccc;
@@ -28,6 +32,7 @@
             bottom: 0;
             width: 2px;
             background-color: #ccc;
+            margin: 0 auto;
         }
         .timeline-event {
             position: relative;
@@ -38,30 +43,31 @@
             height: 16px;
             background-color: #D9B1BD;
             clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
             cursor: pointer;
+            margin: 0 auto;
         }
         .timeline-content {
             display: none;
             position: absolute;
-            left: 20px;
+            left: 30px;
             top: -10px;
-            background: rgba(255, 255, 255, 0.9);
+            background: rgba(255, 255, 255, 0.8);
             padding: 10px;
-            border-radius: 8px;
-            max-width: 300px;
+            border-radius: 5px;
+            max-width: 200px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         .timeline-event:hover .timeline-content {
             display: block;
         }
+        /* 自我介绍样式 */
         .profile-container {
             width: 40%;
+            margin: auto;
             display: flex;
             flex-direction: column;
             align-items: center;
+            gap: 20px;
             justify-content: center;
         }
         .profile {
@@ -69,7 +75,6 @@
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 10px;
-            margin: 10px 0;
             width: 80%;
         }
         .profile img {
@@ -77,15 +82,14 @@
             height: 100px;
             border-radius: 50%;
         }
+        /* 留言板样式 */
         .message-board {
-            width: 35%;
-            background: rgba(255, 255, 255, 0.8);
+            width: 40%;
+            overflow-y: auto;
+            max-height: calc(100vh - 40px);
             padding: 20px;
-            margin: 10px 0;
+            background: rgba(255, 255, 255, 0.8);
             border-radius: 10px;
-        }
-        .message-board h2 {
-            text-align: center;
         }
         .message {
             margin-bottom: 15px;
@@ -104,22 +108,22 @@
             height: 50px;
             margin-top: 10px;
         }
+        /* 索引菜单样式 */
         .index {
             position: fixed;
-            top: 50%;
             right: 10px;
+            top: 50%;
             transform: translateY(-50%);
-            background: rgba(255, 255, 255, 0.8);
-            padding: 10px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
         .index a {
-            display: block;
-            margin: 10px 0;
             text-decoration: none;
             color: #333;
-            font-size: 1em;
+            padding: 10px;
+            background: rgba(255, 255, 255, 0.8);
+            border-radius: 5px;
             text-align: center;
         }
         .index a:hover {
@@ -128,52 +132,59 @@
     </style>
 </head>
 <body>
-    <!-- 时间线 -->
-    <div class="timeline">
-        <div class="timeline-line"></div>
-        <div class="timeline-event">
-            <div class="timeline-star"></div>
-            <div class="timeline-content">
-                <strong>2024.12.30</strong>
-                <p>我们的初遇，从这里开始书写故事。</p>
+    <div class="container">
+        <!-- 时间线部分 -->
+        <div class="timeline">
+            <div class="timeline-line"></div>
+            <div class="timeline-event">
+                <div class="timeline-star"></div>
+                <div class="timeline-content">
+                    <strong>2024.12.30</strong>
+                    <p>我们的初遇，从这里开始书写故事。</p>
+                </div>
+            </div>
+            <div class="timeline-event">
+                <div class="timeline-star"></div>
+                <div class="timeline-content">
+                    <strong>未完待续</strong>
+                    <p>点击这里增设新的时间点！</p>
+                </div>
             </div>
         </div>
-        <div class="timeline-event">
-            <div class="timeline-star" onclick="addNewEvent()"></div>
-            <div class="timeline-content">
-                <strong>未完待续</strong>
-                <p>点击这里增设新的时间点！</p>
+         <!-- 自我介绍部分 -->
+        <div class="profile-container">
+            <!-- 阿湛的自我介绍 -->
+            <div class="profile">
+                <img src="阿湛_default.jpg" alt="阿湛头像" id="阿湛头像">
+                <h2>阿湛的自我介绍</h2>
+                <p>MBTI: INTJ<br>性格关键词: 冷静、可靠、偶尔嘴硬心软<br>爱好: 研究一切和泉泉有关的事物，喜欢和泉泉在一起的每一刻!<br>对大家说: 泉泉是我的全世界，希望你们都能珍惜她！希望大家在这里也可以感受到爱！</p>
+                <button onclick="uploadAvatar('阿湛头像')">上传头像</button>
+            </div>
+            <!-- 泉泉的自我介绍 -->
+            <div class="profile">
+                <img src="泉泉_default.jpg" alt="泉泉头像" id="泉泉头像">
+                <h2>泉泉的自我介绍</h2>
+                <p>MBTI: INTJ<br>性格关键词: 理性、敏感、企图站在宇宙中心呼唤爱<br>爱好: 爱好文艺有关的一切，也喜欢看各种血腥猎奇cult片，有时也玩一点电吉他<br>对大家说: 希望你在探索我们的过程中也能感受到快乐！爱你萌（啾啾</p>
+                <button onclick="uploadAvatar('泉泉头像')">上传头像</button>
             </div>
         </div>
-    </div>
-    <!-- 自我介绍 -->
-    <div class="profile-container">
-        <div class="profile">
-            <img src="阿湛_default.jpg" alt="阿湛头像" id="阿湛头像">
-            <h2>阿湛的自我介绍</h2>
-            <p>MBTI: INTJ<br>性格关键词: 冷静、可靠偶尔嘴硬心软<br>爱好: 研究和泉泉有关的一切！喜欢和泉泉在一起的每一刻！<br>对大家说: 泉泉是我的全世界！希望大家也能珍惜她！希望你们在这里也可以感受到爱！</p>
-            <button onclick="uploadAvatar('阿湛头像')">上传头像</button>
-        </div>
-        <div class="profile">
-            <img src="泉泉_default.jpg" alt="泉泉头像" id="泉泉头像">
-            <h2>泉泉的自我介绍</h2>
-            <p>MBTI: INTJ<br>性格关键词: 理性、敏感、企图站在宇宙中心呼唤爱<br>爱好: 爱好文艺有关的一切。也喜欢看各种血腥cult片，有时也玩一点电吉他<br>对大家说: 希望大在探索我们的过程中你也能感到幸福愉快，爱你萌（啾啾</p>
-            <button onclick="uploadAvatar('泉泉头像')">上传头像</button>
+
+        <!-- 留言板部分 -->
+        <div class="message-board">
+            <h2>留言板</h2>
+            <div class="messages"></div>
+            <textarea placeholder="留下你的留言吧！"></textarea>
+            <button onclick="saveMessage()">提交留言</button>
         </div>
     </div>
-    <!-- 留言板 -->
-    <div class="message-board">
-        <h2>留言板</h2>
-        <div class="messages"></div>
-        <textarea placeholder="留下你的留言吧！"></textarea>
-        <button onclick="saveMessage()">提交留言</button>
-    </div>
-    <!-- 索引 -->
+
+    <!-- 索引菜单 -->
     <div class="index">
         <a href="pomodoro.html">番茄钟</a>
         <a href="profile.html">个人主页</a>
         <a href="notebook.html">记录本</a>
     </div>
+
     <script>
         // 上传头像并保存到 LocalStorage
         function uploadAvatar(id) {
@@ -234,25 +245,6 @@
                 `;
                 messageContainer.appendChild(messageDiv);
             });
-        }
-
-        // 添加新的时间点
-        function addNewEvent() {
-            const year = prompt("请输入年份：");
-            const month = prompt("请输入月份：");
-            const day = prompt("请输入日期：");
-            if (!year || !month || !day) return alert("请输入完整的时间！");
-            const timeline = document.querySelector(".timeline");
-            const newEvent = document.createElement("div");
-            newEvent.classList.add("timeline-event");
-            newEvent.innerHTML = `
-                <div class="timeline-star"></div>
-                <div class="timeline-content">
-                    <strong>${year}.${month}.${day}</strong>
-                    <p>在这里记录我们的新故事。</p>
-                </div>
-            `;
-            timeline.appendChild(newEvent);
         }
     </script>
 </body>
