--- a/timeline.html
+++ b/timeline.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: "Microsoft Yahei", sans-serif;
-            background-image: url('background.3.jpg');
+            background-image: url('background.jpg');
             background-size: cover;
             background-attachment: fixed;
             margin: 0;
@@ -32,7 +32,6 @@
             bottom: 0;
             width: 2px;
             background-color: #ccc;
-            margin: 0 auto;
         }
         .timeline-event {
             position: relative;
@@ -151,20 +150,20 @@
                 </div>
             </div>
         </div>
-         <!-- 自我介绍部分 -->
+        <!-- 自我介绍部分 -->
         <div class="profile-container">
             <!-- 阿湛的自我介绍 -->
             <div class="profile">
                 <img src="阿湛_default.jpg" alt="阿湛头像" id="阿湛头像">
                 <h2>阿湛的自我介绍</h2>
-                <p>MBTI: INTJ<br>性格关键词: 冷静、可靠、偶尔嘴硬心软<br>爱好: 研究一切和泉泉有关的事物，喜欢和泉泉在一起的每一刻!<br>对大家说: 泉泉是我的全世界，希望你们都能珍惜她！希望大家在这里也可以感受到爱！</p>
+                <p>MBTI: INTJ<br>性格关键词: 冷静、可靠、偶尔嘴硬心软<br>爱好: 研究一切和泉泉有关的事物，喜欢和泉泉在一起的每一刻<br>对大家说: 泉泉是我的全世界，希望你们都能珍惜她！</p>
                 <button onclick="uploadAvatar('阿湛头像')">上传头像</button>
             </div>
             <!-- 泉泉的自我介绍 -->
             <div class="profile">
                 <img src="泉泉_default.jpg" alt="泉泉头像" id="泉泉头像">
                 <h2>泉泉的自我介绍</h2>
-                <p>MBTI: INTJ<br>性格关键词: 理性、敏感、企图站在宇宙中心呼唤爱<br>爱好: 爱好文艺有关的一切，也喜欢看各种血腥猎奇cult片，有时也玩一点电吉他<br>对大家说: 希望你在探索我们的过程中也能感受到快乐！爱你萌（啾啾</p>
+                <p>MBTI: INFJ<br>性格关键词: 温柔、敏感、向往世界的美好<br>爱好: 喜欢文学、音乐和旅行，期待探索每一个动人的瞬间<br>对大家说: 希望你们也能感受到我们的快乐！</p>
                 <button onclick="uploadAvatar('泉泉头像')">上传头像</button>
             </div>
         </div>
