--- a/timeline.html
+++ b/timeline.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: "Microsoft Yahei", sans-serif;
-            background-image: url('background.jpg');
+            background-image: url('background.3.jpg');
             background-size: cover;
             background-attachment: fixed;
             margin: 0;
@@ -163,7 +163,7 @@
             <div class="profile">
                 <img src="泉泉_default.jpg" alt="泉泉头像" id="泉泉头像">
                 <h2>泉泉的自我介绍</h2>
-                <p>MBTI: INFJ<br>性格关键词: 温柔、敏感、向往世界的美好<br>爱好: 喜欢文学、音乐和旅行，期待探索每一个动人的瞬间<br>对大家说: 希望你们也能感受到我们的快乐！</p>
+                <p>MBTI: INTJ<br>性格关键词: 理性、敏感、企图站在宇宙中心呼唤爱<br>爱好: 爱好文艺有关的一切<br>对大家说: 希望你们也能感受到我们的快乐！</p>
                 <button onclick="uploadAvatar('泉泉头像')">上传头像</button>
             </div>
         </div>
